# SDL3-Hub

./: CMakeLists.txt
small/: CMakeLists.txt  archimedes.cpp  tetris.cpp
